@@ -1,5 +1,6 @@
 * Fix bug with {type} being set to unexpected values in some cases (Christoph Lamprecht)
 * Add tests for scan_chunk (Alexandr Ciornii)
+* Add special case for parent.pm (Alexandr Ciornii)
 
 [Changes for 0.91 - 2009-06-22]
 * Add special case for Tk's setPalette call (Christoph Lamprecht)
